--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -1,12 +1,14 @@
 project(ApprovalTests CXX)
 set(CMAKE_CXX_STANDARD 11)
-add_library(${PROJECT_NAME} INTERFACE)
+add_library(${PROJECT_NAME}
+        scrubbers/Scrubbers.cpp
+        )
 add_library(ApprovalTests::ApprovalTests ALIAS ApprovalTests)
 target_include_directories(${PROJECT_NAME}
-        INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/..
-        INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..
+        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
         )
-target_compile_options(${PROJECT_NAME} INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/FC>)
+target_compile_options(${PROJECT_NAME} PUBLIC $<$<CXX_COMPILER_ID:MSVC>:/FC>)
 
 if (("${CMAKE_GENERATOR}" MATCHES "Ninja") AND (${CMAKE_UNITY_BUILD}))
     # In case this is a Ninja Unity in-source build, disabling the
@@ -14,5 +16,5 @@ if (("${CMAKE_GENERATOR}" MATCHES "Ninja") AND (${CMAKE_UNITY_BUILD}))
     # Catch2 tests, and others which depend on __FILE__ - which then go on to pass,
     # even when built inside source trees.
     message(NOTICE "Ninja with Unity build detected: disabling unnecessary ApprovalTests compile-time check of __FILE__")
-    target_compile_definitions(${PROJECT_NAME} INTERFACE APPROVAL_TESTS_DISABLE_FILE_MACRO_CHECK)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC APPROVAL_TESTS_DISABLE_FILE_MACRO_CHECK)
 endif ()
