--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMake/")
 include(ApprovalTestsOptions)
 include(UseCompilerCache)
 
-if (CMAKE_CXX_COMPILER_ID MATCHES ".*Clang" AND
-        CMAKE_CXX_COMPILER_VERSION GREATER_EQUAL 9.0)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftime-trace")
-endif ()
+#if (CMAKE_CXX_COMPILER_ID MATCHES ".*Clang" AND
+#        CMAKE_CXX_COMPILER_VERSION GREATER_EQUAL 9.0)
+#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftime-trace")
+#endif ()
 
 useCompilerCache()
 
