R** Add machine-generated .cpp files for all .h files
Note that some of these do not currently compile, as not
all of our .h files contain all the headers that they use.

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -1,7 +1,158 @@
 project(ApprovalTests CXX)
 set(CMAKE_CXX_STANDARD 11)
 add_library(${PROJECT_NAME}
+        ApprovalTestsVersion.h
+        ApprovalTestsVersion.cpp
+        Approvals.h
+        Approvals.cpp
+        ApprovalsMacroDefaults.h
+        ApprovalsMacroDefaults.cpp
+        CombinationApprovals.h
+        CombinationApprovals.cpp
+        comparators/ComparatorDisposer.h
+        comparators/ComparatorDisposer.cpp
+        comparators/ComparatorFactory.h
+        comparators/ComparatorFactory.cpp
+        comparators/TextFileComparator.h
+        comparators/TextFileComparator.cpp
+        core/ApprovalComparator.h
+        core/ApprovalComparator.cpp
+        core/ApprovalException.h
+        core/ApprovalException.cpp
+        core/ApprovalNamer.h
+        core/ApprovalNamer.cpp
+        core/ApprovalWriter.h
+        core/ApprovalWriter.cpp
+        core/FileApprover.h
+        core/FileApprover.cpp
+        core/Options.h
+        core/Options.cpp
+        core/Reporter.h
+        core/Reporter.cpp
+        integrations/CheckFileMacroIsAbsolute.h
+        integrations/CheckFileMacroIsAbsolute.cpp
+        integrations/boost_test/BoostTestApprovals.h
+        integrations/boost_test/BoostTestApprovals.cpp
+        integrations/catch/Catch2Approvals.h
+        integrations/catch/Catch2Approvals.cpp
+        integrations/doctest/DocTestApprovals.h
+        integrations/doctest/DocTestApprovals.cpp
+        integrations/fmt/FmtApprovals.h
+        integrations/fmt/FmtApprovals.cpp
+        integrations/fmt/FmtToString.h
+        integrations/fmt/FmtToString.cpp
+        integrations/google/GoogleConfiguration.h
+        integrations/google/GoogleConfiguration.cpp
+        integrations/google/GoogleCustomizationsFactory.h
+        integrations/google/GoogleCustomizationsFactory.cpp
+        integrations/google/GoogleTestApprovals.h
+        integrations/google/GoogleTestApprovals.cpp
+        integrations/ut/UTApprovals.h
+        integrations/ut/UTApprovals.cpp
+        launchers/CommandLauncher.h
+        launchers/CommandLauncher.cpp
+        launchers/SystemLauncher.h
+        launchers/SystemLauncher.cpp
+        namers/ApprovalTestNamer.h
+        namers/ApprovalTestNamer.cpp
+        namers/DefaultNamerDisposer.h
+        namers/DefaultNamerDisposer.cpp
+        namers/DefaultNamerFactory.h
+        namers/DefaultNamerFactory.cpp
+        namers/ExistingFileNamer.h
+        namers/ExistingFileNamer.cpp
+        namers/HelpMessages.h
+        namers/HelpMessages.cpp
+        namers/NamerFactory.h
+        namers/NamerFactory.cpp
+        namers/SectionNameDisposer.h
+        namers/SectionNameDisposer.cpp
+        namers/SeparateApprovedAndReceivedDirectoriesNamer.h
+        namers/SeparateApprovedAndReceivedDirectoriesNamer.cpp
+        namers/SubdirectoryDisposer.h
+        namers/SubdirectoryDisposer.cpp
+        reporters/AutoApproveIfMissingReporter.h
+        reporters/AutoApproveIfMissingReporter.cpp
+        reporters/AutoApproveReporter.h
+        reporters/AutoApproveReporter.cpp
+        reporters/BlockingReporter.h
+        reporters/BlockingReporter.cpp
+        reporters/CIBuildOnlyReporter.h
+        reporters/CIBuildOnlyReporter.cpp
+        reporters/CIBuildOnlyReporterUtils.h
+        reporters/CIBuildOnlyReporterUtils.cpp
+        reporters/ClipboardReporter.h
+        reporters/ClipboardReporter.cpp
+        reporters/CombinationReporter.h
+        reporters/CombinationReporter.cpp
+        reporters/CommandReporter.h
+        reporters/CommandReporter.cpp
+        reporters/ConvertForCygwin.h
+        reporters/ConvertForCygwin.cpp
+        reporters/CustomReporter.h
+        reporters/CustomReporter.cpp
+        reporters/DefaultFrontLoadedReporter.h
+        reporters/DefaultFrontLoadedReporter.cpp
+        reporters/DefaultReporter.h
+        reporters/DefaultReporter.cpp
+        reporters/DefaultReporterDisposer.h
+        reporters/DefaultReporterDisposer.cpp
+        reporters/DefaultReporterFactory.h
+        reporters/DefaultReporterFactory.cpp
+        reporters/DiffInfo.h
+        reporters/DiffInfo.cpp
+        reporters/DiffPrograms.h
+        reporters/DiffPrograms.cpp
+        reporters/DiffReporter.h
+        reporters/DiffReporter.cpp
+        reporters/FirstWorkingReporter.h
+        reporters/FirstWorkingReporter.cpp
+        reporters/FrontLoadedReporterDisposer.h
+        reporters/FrontLoadedReporterDisposer.cpp
+        reporters/FrontLoadedReporterFactory.h
+        reporters/FrontLoadedReporterFactory.cpp
+        reporters/GenericDiffReporter.h
+        reporters/GenericDiffReporter.cpp
+        reporters/LinuxReporters.h
+        reporters/LinuxReporters.cpp
+        reporters/MacReporters.h
+        reporters/MacReporters.cpp
+        reporters/QuietReporter.h
+        reporters/QuietReporter.cpp
+        reporters/TextDiffReporter.h
+        reporters/TextDiffReporter.cpp
+        reporters/WindowsReporters.h
+        reporters/WindowsReporters.cpp
+        scrubbers/Scrubbers.h
         scrubbers/Scrubbers.cpp
+        utilities/Blocker.h
+        utilities/Blocker.cpp
+        utilities/CartesianProduct.h
+        utilities/CartesianProduct.cpp
+        utilities/ExceptionCollector.h
+        utilities/ExceptionCollector.cpp
+        utilities/FileUtils.h
+        utilities/FileUtils.cpp
+        utilities/FileUtilsSystemSpecific.h
+        utilities/FileUtilsSystemSpecific.cpp
+        utilities/MachineBlocker.h
+        utilities/MachineBlocker.cpp
+        utilities/Macros.h
+        utilities/Macros.cpp
+        utilities/MoreHelpMessages.h
+        utilities/MoreHelpMessages.cpp
+        utilities/StringMaker.h
+        utilities/StringMaker.cpp
+        utilities/StringUtils.h
+        utilities/StringUtils.cpp
+        utilities/SystemUtils.h
+        utilities/SystemUtils.cpp
+        utilities/WinMinGWUtils.h
+        utilities/WinMinGWUtils.cpp
+        writers/ExistingFile.h
+        writers/ExistingFile.cpp
+        writers/StringWriter.h
+        writers/StringWriter.cpp
         )
 add_library(ApprovalTests::ApprovalTests ALIAS ApprovalTests)
 target_include_directories(${PROJECT_NAME}
