--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(${PROJECT_NAME}
         scrubbers/GuidScrubberTests.cpp
         scrubbers/ScrubberTests.cpp
         utilities/CartesianProductTests.cpp
+        utilities/DateUtilsTests.cpp
         utilities/ExceptionCollectorTests.cpp
         utilities/FileUtilsSystemSpecificTests.cpp
         utilities/FileUtilsTests.cpp
