d   Make a copy of breathe's CSS file (#153)
This is in preparation for customising the CSS.

Copied from https://github.com/michaeljones/breathe/blob/bba3107971427bac625135a198a9678aa144c0f5/documentation/source/_static/breathe.css

--- a/doc/sphinx/CMakeLists.txt
+++ b/doc/sphinx/CMakeLists.txt
@@ -16,6 +16,7 @@ file(GLOB
         APPROVAL_TESTS_SPHINX_TEMPLATE_FILES
         CONFIGURE_DEPENDS
         ${CMAKE_CURRENT_SOURCE_DIR}/_templates/*
+        ${CMAKE_CURRENT_SOURCE_DIR}/_static/*
         )
 
 # TODO Only regenerate Sphinx when:
