F   Added ReporterFactory - just supports ClipboardReporter
Co-Authored-By: Alessandro Pezzato <alepez@users.noreply.github.com>
Co-Authored-By: Andrea Beducci <andrea@beducci.eu>

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -104,6 +104,8 @@ add_library(${PROJECT_NAME}
         reporters/MacReporters.cpp
         reporters/QuietReporter.h
         reporters/QuietReporter.cpp
+        reporters/ReporterFactory.cpp
+        reporters/ReporterFactory.h
         reporters/TextDiffReporter.h
         reporters/TextDiffReporter.cpp
         reporters/WindowsReporters.h
