--- a/doc/sphinx/CMakeLists.txt
+++ b/doc/sphinx/CMakeLists.txt
@@ -8,11 +8,7 @@ set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR})
 set(SPHINX_BUILD ${CMAKE_CURRENT_BINARY_DIR})
 set(SPHINX_INDEX_FILE ${SPHINX_BUILD}/index.html)
 
-# Create a fake target, to force the Sphinx target to always be built.
-# Taken from https://stackoverflow.com/a/31518137/104370
-set(SPHINX_FAKE_INDEX_FILE ${SPHINX_BUILD}/__fake_index.html)
-
-add_custom_command(OUTPUT ${SPHINX_INDEX_FILE} ${SPHINX_FAKE_INDEX_FILE}
+add_custom_command(OUTPUT ${SPHINX_INDEX_FILE} ${DOCS_FAKE_OUTPUT_FILE_TO_FORCE_BUILD}
         COMMAND
         ${SPHINX_EXECUTABLE} -b html
         # Tell Breathe where to find the Doxygen output
@@ -22,7 +18,7 @@ add_custom_command(OUTPUT ${SPHINX_INDEX_FILE} ${SPHINX_FAKE_INDEX_FILE}
         COMMENT "Generating documentation with Sphinx")
 
 # Nice named target so we can run the job easily
-add_custom_target(Sphinx DEPENDS Doxygen RunMdsnippets ${SPHINX_FAKE_INDEX_FILE})
+add_custom_target(Sphinx DEPENDS Doxygen RunMdsnippets ${DOCS_FAKE_OUTPUT_FILE_TO_FORCE_BUILD})
 
 # Show where to find the generated documentation
 add_custom_command(TARGET Sphinx POST_BUILD
