--- a/doc/run_mdsnippets/CMakeLists.txt
+++ b/doc/run_mdsnippets/CMakeLists.txt
@@ -20,7 +20,7 @@ list(GET APPROVAL_TESTS_GEN_DOC_MD_FILES 0 FIRST_GENERATED_MD_FILE)
 set(OTHER_GENERATED_MD_FILES ${APPROVAL_TESTS_GEN_DOC_MD_FILES})
 list(REMOVE_AT OTHER_GENERATED_MD_FILES 0)
 
-add_custom_command(OUTPUT ${FIRST_GENERATED_MD_FILE}
+add_custom_command(OUTPUT ${FIRST_GENERATED_MD_FILE} ${DOCS_FAKE_OUTPUT_FILE_TO_FORCE_BUILD}
         COMMAND mdsnippets
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
         DEPENDS
@@ -35,4 +35,4 @@ add_custom_command(OUTPUT ${FIRST_GENERATED_MD_FILE}
         )
 
 # Nice named target so we can run the job easily
-add_custom_target(RunMdsnippets DEPENDS ${FIRST_GENERATED_MD_FILE})
+add_custom_target(RunMdsnippets DEPENDS ${FIRST_GENERATED_MD_FILE} ${DOCS_FAKE_OUTPUT_FILE_TO_FORCE_BUILD})
