--- a/tests/CppUTest_Tests/CMakeLists.txt
+++ b/tests/CppUTest_Tests/CMakeLists.txt
@@ -15,4 +15,4 @@ if (APPROVAL_TESTS_ENABLE_CODE_COVERAGE)
             DEPENDENCIES ${PROJECT_NAME})
 endif ()
 
-include(WarningsAsErrors)
+#include(WarningsAsErrors)
