F   Move CppUTest integration code to CppUTestApprovals.h (#159)

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -24,6 +24,7 @@ add_library(${PROJECT_NAME}
         integrations/CheckFileMacroIsAbsolute.h
         integrations/boost_test/BoostTestApprovals.h
         integrations/catch/Catch2Approvals.h
+        integrations/cpputest/CppUTestApprovals.h
         integrations/doctest/DocTestApprovals.h
         integrations/fmt/FmtApprovals.h
         integrations/fmt/FmtToString.h
