t   Add test case showing ApprovalTests driven by CppUTest

--- a/tests/CppUTest_Tests/CMakeLists.txt
+++ b/tests/CppUTest_Tests/CMakeLists.txt
@@ -2,6 +2,7 @@ project(CppUTest_Tests)
 set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
         main.cpp
+        CppUTestApprovalsTests.cpp
         namers/CppUTestNamerTests.cpp
         )
 
