e   Make ctest in GitHub actions use --output-on-failure
To try to work out why Boost_Tests on Mac has started failing
recently.

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -145,5 +145,5 @@ jobs:
       run: cmake --build .
       working-directory: ${{ env.BUILD_DIR_PATH }}
     - name: test
-      run: ctest --verbose -C Debug
+      run: ctest --verbose --output-on-failure -C Debug
       working-directory: ${{ env.BUILD_DIR_PATH }}
