e   Fix windows CI failures in GitHub actions
The new way of setting environment variables in GitHub Actions
means that using '${{ env.BUILD_DIR_PATH }}' now gives an empty string.

I can't use $BUILD_DIR_PATH on windows either, and I don't want to have
to use $BUILD_DIR_PATH on Unix and %BUILD_DIR_PATH% on Windows.

So this tries using cmake script mode to access environment variable
in a cross-platform way.

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -133,9 +133,11 @@ jobs:
         echo BOOST_INCLUDEDIR="${{ env.BOOST_ROOT }}\boost\include" >> $GITHUB_ENV
         echo BOOST_LIBRARYDIR="${{ env.BOOST_ROOT }}\lib" >> $GITHUB_ENV
 
-    - name: make build space
+    - name: make build space, using cmake script mode to access environment variable in cross-platform way
+      shell: cmake -P {0}
       run: |
-        mkdir ${{ env.BUILD_DIR_PATH }}
+        message("About to create directory $ENV{BUILD_DIR_PATH}")
+        file(MAKE_DIRECTORY $ENV{BUILD_DIR_PATH})
     - name: cmake
       run: |
         cmake --version
