e   Try to prevent CppUTest setting build type to RelWithDebInfo

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -139,7 +139,7 @@ jobs:
     - name: cmake
       run: |
         cmake --version
-        cmake -G ${{ matrix.generator }} ${{ github.workspace }}
+        cmake -G ${{ matrix.generator }} ${{ github.workspace }} -DCMAKE_BUILD_TYPE=Debug
       working-directory: ${{ env.BUILD_DIR_PATH }}
     - name: build
       run: cmake --build .
