B   Disable CppUTest integration with Approval Tests on CygWin (See #161)
This integration does not build on AppVeyor's CygWin.
If any users ask for support for this, it can be investigated further.

--- a/examples/cpputest_existing_main/CMakeLists.txt
+++ b/examples/cpputest_existing_main/CMakeLists.txt
@@ -1,3 +1,8 @@
+if (CYGWIN)
+    MESSAGE("The CppUTest integration with Approval Tests does not build on this platform, CygWin, therefore it's disabled")
+    return()
+endif()
+
 project(cpputest_existing_main)
 set(CMAKE_CXX_STANDARD 11)
 add_executable(${PROJECT_NAME}
