--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,20 +34,20 @@ endif ()
 # This will optionally add the other third-party sub-directories
 add_subdirectory(third_party)
 
-if (NOT_SUBPROJECT OR APPROVAL_TESTS_BUILD_TESTING OR APPROVAL_TESTS_BUILD_EXAMPLES)
+if (APPROVAL_TESTS_BUILD_TESTING OR APPROVAL_TESTS_BUILD_EXAMPLES)
     enable_testing()
 endif ()
 
-if (NOT_SUBPROJECT OR APPROVAL_TESTS_BUILD_TESTING)
+if (APPROVAL_TESTS_BUILD_TESTING)
     add_subdirectory(CMake/fmt)
     add_subdirectory(tests)
 endif ()
 
-if (NOT_SUBPROJECT OR APPROVAL_TESTS_BUILD_EXAMPLES)
+if (APPROVAL_TESTS_BUILD_EXAMPLES)
     add_subdirectory(examples)
 endif ()
 
-if (NOT_SUBPROJECT OR APPROVAL_TESTS_BUILD_DOCS)
+if (APPROVAL_TESTS_BUILD_DOCS)
     add_subdirectory(doc)
 endif ()
 
@@ -60,6 +60,10 @@ endif ()
 #message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
 #message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
 #message("CMAKE_UNITY_BUILD = ${CMAKE_UNITY_BUILD}")
-#message("APPROVAL_TESTS_BUILD_THIRD_PARTY = ${APPROVAL_TESTS_BUILD_THIRD_PARTY}")
-#message("APPROVAL_TESTS_BUILD_TESTING = ${APPROVAL_TESTS_BUILD_TESTING}")
-#message("APPROVAL_TESTS_BUILD_EXAMPLES = ${APPROVAL_TESTS_BUILD_EXAMPLES}")
+message("NOT_SUBPROJECT = ${NOT_SUBPROJECT}")
+message("APPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2 = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2}")
+message("APPROVAL_TESTS_BUILD_THIRD_PARTY_DOCTEST = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_DOCTEST}")
+message("APPROVAL_TESTS_BUILD_THIRD_PARTY_UT = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_UT}")
+message("APPROVAL_TESTS_BUILD_TESTING = ${APPROVAL_TESTS_BUILD_TESTING}")
+message("APPROVAL_TESTS_BUILD_EXAMPLES = ${APPROVAL_TESTS_BUILD_EXAMPLES}")
+message("APPROVAL_TESTS_BUILD_DOCS = ${APPROVAL_TESTS_BUILD_DOCS}")
