e   Add APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION CMake option
It's on by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,3 +67,4 @@ endif ()
 #message("APPROVAL_TESTS_BUILD_TESTING = ${APPROVAL_TESTS_BUILD_TESTING}")
 #message("APPROVAL_TESTS_BUILD_EXAMPLES = ${APPROVAL_TESTS_BUILD_EXAMPLES}")
 #message("APPROVAL_TESTS_BUILD_DOCS = ${APPROVAL_TESTS_BUILD_DOCS}")
+message("APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION}")
