--- a/examples/catch2_existing_main/CMakeLists.txt
+++ b/examples/catch2_existing_main/CMakeLists.txt
@@ -1,3 +1,7 @@
+if (NOT APPROVAL_TESTS_ENABLE_CATCH2_INTEGRATION)
+    return()
+endif ()
+
 project(catch2_existing_main)
 set(CMAKE_CXX_STANDARD 11)
 add_executable(${PROJECT_NAME}
