e   Add APPROVAL_TESTS_ENABLE_UT_INTEGRATION CMake option
It's on by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,3 +71,4 @@ message("APPROVAL_TESTS_ENABLE_CATCH2_INTEGRATION = ${APPROVAL_TESTS_ENABLE_CATC
 message("APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION}")
 message("APPROVAL_TESTS_ENABLE_DOCTEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_DOCTEST_INTEGRATION}")
 message("APPROVAL_TESTS_ENABLE_GOOGLETEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_GOOGLETEST_INTEGRATION}")
+message("APPROVAL_TESTS_ENABLE_UT_INTEGRATION = ${APPROVAL_TESTS_ENABLE_UT_INTEGRATION}")
