--- a/tests/CMake_Tests/ut_cmake_checks/CMakeLists.txt
+++ b/tests/CMake_Tests/ut_cmake_checks/CMakeLists.txt
@@ -1,3 +1,7 @@
+if (NOT APPROVAL_TESTS_ENABLE_UT_INTEGRATION)
+    return()
+endif ()
+
 if ((CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION GREATER_EQUAL 9.2) OR (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER_VERSION GREATER_EQUAL 9.0))
     set(CMAKE_CXX_STANDARD 20)
 
