--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ endif ()
 #message("APPROVAL_TESTS_BUILD_TESTING = ${APPROVAL_TESTS_BUILD_TESTING}")
 #message("APPROVAL_TESTS_BUILD_EXAMPLES = ${APPROVAL_TESTS_BUILD_EXAMPLES}")
 #message("APPROVAL_TESTS_BUILD_DOCS = ${APPROVAL_TESTS_BUILD_DOCS}")
+message("APPROVAL_TESTS_ENABLE_BOOST_TEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_BOOST_TEST_INTEGRATION}")
 message("APPROVAL_TESTS_ENABLE_CATCH2_INTEGRATION = ${APPROVAL_TESTS_ENABLE_CATCH2_INTEGRATION}")
 message("APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION}")
 message("APPROVAL_TESTS_ENABLE_DOCTEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_DOCTEST_INTEGRATION}")
