F   Add support for approving strings with Unicode characters #154
Co-Authored-By: Llewellyn Falco <10874+isidore@users.noreply.github.com>

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -129,6 +129,7 @@ add_library(${PROJECT_NAME}
         utilities/MoreHelpMessages.h
         utilities/MoreHelpMessages.cpp
         utilities/StringMaker.h
+        utilities/StringMaker.cpp
         utilities/StringUtils.h
         utilities/StringUtils.cpp
         utilities/SystemUtils.h
