e   Fix "multiple rules generate xxx" build error in Ninja builds
ninja: error: build.ninja:4018: multiple rules generate doc/__fake_output_file_to_force_build [-w dupbuild=err]

--- a/doc/run_mdsnippets/CMakeLists.txt
+++ b/doc/run_mdsnippets/CMakeLists.txt
@@ -4,6 +4,8 @@ if (NOT mdsnippets_FOUND)
     return()
 endif ()
 
+set(DOCS_FAKE_OUTPUT_FILE_TO_FORCE_BUILD ${CMAKE_CURRENT_BINARY_DIR}/__fake_output_file_to_force_build)
+
 add_custom_command(OUTPUT ${DOCS_FAKE_OUTPUT_FILE_TO_FORCE_BUILD}
         COMMAND mdsnippets
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
