--- a/doc/sphinx/CMakeLists.txt
+++ b/doc/sphinx/CMakeLists.txt
@@ -8,6 +8,8 @@ set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR})
 set(SPHINX_BUILD ${CMAKE_CURRENT_BINARY_DIR})
 set(SPHINX_INDEX_FILE ${SPHINX_BUILD}/index.html)
 
+set(DOCS_FAKE_OUTPUT_FILE_TO_FORCE_BUILD ${CMAKE_CURRENT_BINARY_DIR}/__fake_output_file_to_force_build)
+
 add_custom_command(OUTPUT ${SPHINX_INDEX_FILE} ${DOCS_FAKE_OUTPUT_FILE_TO_FORCE_BUILD}
         COMMAND
         ${SPHINX_EXECUTABLE} -b html
