e   Try fixing test of code that uses conan-center-index-claremacrae

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -38,8 +38,17 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+    - name: Check out claremacrae fork of conan-center-index
+      uses: actions/checkout@v2
+      with:
+        repository: claremacrae/conan-center-index
+        path: ../conan-center-index-claremacrae
+
     - name: Test build/ with pytest
       run: |
+        pwd
+        ls -ls
+        ls -ls ..
         cd build
         python -m unittest discover -s tests --verbose
 
