--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -42,7 +42,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: claremacrae/conan-center-index
-        path: ../conan-center-index-claremacrae
+        path: conan-center-index-claremacrae
 
     - name: Test build/ with pytest
       run: |
