--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -36,6 +36,7 @@ jobs:
     - name: Install dependencies
       run: |
         cd ApprovalTests/ApprovalTests.cpp
+        sudo apt-get install pandoc
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r build/requirements.txt
