e   Move code for installing Python requirements to install_python_requirements.sh
This will allow me to test it on an Ubuntu VM

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -36,12 +36,8 @@ jobs:
     - name: Install dependencies
       run: |
         cd ApprovalTests/ApprovalTests.cpp
-        sudo apt-get install pandoc
-        pandoc --version
-        python3 -m pip install --upgrade pip
-        pip3 install flake8 pytest
-        pip3 install -r build/requirements.txt
-        pip3 install -r doc/requirements.txt
+        cd build
+        ./install_python_requirements.sh
 
     - name: Lint with flake8
       run: |
