e   Try specifying exact pandoc version - 2.9.2.1 - to use on github actions.
When using 'sudo apt-get install pandoc', version 1.19.2.4
is installed, and that seems to be generating different output
from 2.9.2.1 on Mac - which is failing the approval tests,
as far as I can see.

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -39,6 +39,10 @@ jobs:
         cd build
         ./install_python_requirements.sh
 
+    - uses: r-lib/actions/setup-pandoc@v1
+      with:
+        pandoc-version: '2.9.2.1'
+
     - name: Lint with flake8
       run: |
         cd ApprovalTests/ApprovalTests.cpp
