--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -107,11 +107,11 @@ jobs:
     - name: set env for in-source build tree
       if: matrix.in_source_build == true
       run: |
-        ${BUILD_DIR_PATH} = ${{ env.IN_TREE_BUILD_DIR }}
+        ${BUILD_DIR_PATH} = "${{ env.IN_TREE_BUILD_DIR }}"
     - name: set env out-of-source
       if: matrix.in_source_build == false
       run: |
-        ${BUILD_DIR_PATH} = ${{ env.OUT_OF_TREE_BUILD_DIR }}
+        ${BUILD_DIR_PATH} = "${{ env.OUT_OF_TREE_BUILD_DIR }}"
     - name: check env
       run: |
         echo Build space: ${BUILD_DIR_PATH}
