--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -58,64 +58,56 @@ jobs:
         - buildtype: windows-latest
           os: windows-latest
           generator: '"Visual Studio 16 2019"'
-          in_source_build: true
+          build_path: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype: windows-latest (clangcl)
           os: windows-latest
           generator: '"Visual Studio 16 2019" -T "clangcl"'
-          in_source_build: true
+          build_path: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype: windows-2016
           os: windows-2016
           generator: '"Visual Studio 15 2017"'
-          in_source_build: true
+          build_path: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype: ubuntu-latest
           os: ubuntu-latest
           generator: '"Unix Makefiles"'
-          in_source_build: true
+          build_path: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype: ubuntu-latest-ninja
           os: ubuntu-latest
           generator: '"Ninja"'
-          in_source_build: false
+          build_path: ${{ env.OUT_OF_TREE_BUILD_DIR }}
 
         - buildtype:  macOS-latest
           os: macOS-latest
           generator: '"Unix Makefiles"'
-          in_source_build: true
+          build_path: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype:  macOS-latest-unity
           os: macOS-latest
           generator: '"Unix Makefiles" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
-          in_source_build: true
+          build_path: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype:  macOS-latest-ninja
           os: macOS-latest
           generator: '"Ninja"'
-          in_source_build: false
+          build_path: ${{ env.OUT_OF_TREE_BUILD_DIR }}
 
         - buildtype:  macOS-latest-ninja-unity
           os: macOS-latest
           generator: '"Ninja" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
-          in_source_build: true
+          build_path: ${{ env.IN_TREE_BUILD_DIR }}
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@master
     - uses: seanmiddleditch/gha-setup-ninja@v1
       if: contains(matrix.generator, 'Ninja')
 
-    - name: set env for in-source build tree
-      if: matrix.in_source_build == true
+    - name: check build directory
       run: |
-        echo "::set-env name=BUILD_DIR_PATH::${{ env.IN_TREE_BUILD_DIR }}"
-    - name: set env out-of-source
-      if: matrix.in_source_build == false
-      run: |
-        echo "::set-env name=BUILD_DIR_PATH::${{ env.OUT_OF_TREE_BUILD_DIR }}"
-    - name: check env
-      run: |
-        echo Build space: ${{ env.BUILD_DIR_PATH }}
+        echo Build space: matrix.build_path
 
 
     - name: install boost for macOS
@@ -136,15 +128,15 @@ jobs:
 
     - name: make build space
       run: |
-        mkdir ${{ env.BUILD_DIR_PATH }}
+        mkdir matrix.build_path
     - name: cmake
       run: |
         cmake --version
         cmake -G ${{ matrix.generator }} ${{ github.workspace }} -DCMAKE_BUILD_TYPE=Debug
-      working-directory: ${{ env.BUILD_DIR_PATH }}
+      working-directory: matrix.build_path
     - name: build
       run: cmake --build .
-      working-directory: ${{ env.BUILD_DIR_PATH }}
+      working-directory: matrix.build_path
     - name: test
       run: ctest --verbose --output-on-failure -C Debug
-      working-directory: ${{ env.BUILD_DIR_PATH }}
+      working-directory: matrix.build_path
