--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -58,56 +58,64 @@ jobs:
         - buildtype: windows-latest
           os: windows-latest
           generator: '"Visual Studio 16 2019"'
-          build_path: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype: windows-latest (clangcl)
           os: windows-latest
           generator: '"Visual Studio 16 2019" -T "clangcl"'
-          build_path: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype: windows-2016
           os: windows-2016
           generator: '"Visual Studio 15 2017"'
-          build_path: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype: ubuntu-latest
           os: ubuntu-latest
           generator: '"Unix Makefiles"'
-          build_path: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype: ubuntu-latest-ninja
           os: ubuntu-latest
           generator: '"Ninja"'
-          build_path: ${{ env.OUT_OF_TREE_BUILD_DIR }}
+          in_source_build: false
 
         - buildtype:  macOS-latest
           os: macOS-latest
           generator: '"Unix Makefiles"'
-          build_path: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype:  macOS-latest-unity
           os: macOS-latest
           generator: '"Unix Makefiles" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
-          build_path: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype:  macOS-latest-ninja
           os: macOS-latest
           generator: '"Ninja"'
-          build_path: ${{ env.OUT_OF_TREE_BUILD_DIR }}
+          in_source_build: false
 
         - buildtype:  macOS-latest-ninja-unity
           os: macOS-latest
           generator: '"Ninja" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
-          build_path: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@master
     - uses: seanmiddleditch/gha-setup-ninja@v1
       if: contains(matrix.generator, 'Ninja')
 
-    - name: check build directory
+    - name: set env for in-source build tree
+      if: matrix.in_source_build == true
       run: |
-        echo Build space: matrix.build_path
+        echo "::set-env name=BUILD_DIR_PATH::${{ env.IN_TREE_BUILD_DIR }}"
+    - name: set env out-of-source
+      if: matrix.in_source_build == false
+      run: |
+        echo "::set-env name=BUILD_DIR_PATH::${{ env.OUT_OF_TREE_BUILD_DIR }}"
+    - name: check env
+      run: |
+        echo Build space: ${{ env.BUILD_DIR_PATH }}
 
 
     - name: install boost for macOS
@@ -128,15 +136,15 @@ jobs:
 
     - name: make build space
       run: |
-        mkdir matrix.build_path
+        mkdir ${{ env.BUILD_DIR_PATH }}
     - name: cmake
       run: |
         cmake --version
         cmake -G ${{ matrix.generator }} ${{ github.workspace }} -DCMAKE_BUILD_TYPE=Debug
-      working-directory: matrix.build_path
+      working-directory: ${{ env.BUILD_DIR_PATH }}
     - name: build
       run: cmake --build .
-      working-directory: matrix.build_path
+      working-directory: ${{ env.BUILD_DIR_PATH }}
     - name: test
       run: ctest --verbose --output-on-failure -C Debug
-      working-directory: matrix.build_path
+      working-directory: ${{ env.BUILD_DIR_PATH }}
